--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,16 @@
 {
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 80,
+  "useTabs": false,
+  "printWidth": 100,
   "tabWidth": 2,
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "trailingComma": "es5",
+  "jsxSingleQuote": true,
+  "overrides": [
+    {
+      "files": "*.json/hbs",
+      "options": { "singleQuote": true, "parser": "json" }
+    }
+  ]
 }
