--- a/package.json
+++ b/package.json
@@ -4,28 +4,49 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "lint-check": "eslint ./src --c .js,.ts,.tsx  -c eslint.config.js --max-warnings 10 -f pretty",
+    "lint-fix": "eslint ./src --c .js,.ts,.tsx  -c eslint.config.js --max-warnings 10 -f pretty --fix",
+    "lint-check:report": "eslint ./src --c .js,.ts,.tsx -o ./reports/eslint-report/index.txt -c eslint.config.js --max-warnings 10 -f pretty",
     "preview": "vite preview",
-    "tsc: watch": "tsc -b -w"
+    "tsc: watch": "tsc -b -w",
+    "type-check": "tsc -p tsconfig.json --noEmit",
+    "test": "jest --coverage=false --passWithNoTests",
+    "test:watch": "jest --coverage=false --watch",
+    "tsc:watch": "tsc -w -p tsconfig.json --noEmit"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.17.0",
+    "eslint-formatter-pretty": "^5.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "jest-sonar-reporter": "2.0.0",
     "lint-staged": "^15.2.11",
     "prettier": "^3.4.2",
+    "ts-jest": "29.2.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
     "vite": "^6.0.3"
