--- a/package.json
+++ b/package.json
@@ -19,22 +19,32 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "history": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.0",
+    "react-router": "^7.1.3",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.17.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "14.6.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^6.20.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "babel-jest": "^29.7.0",
+    "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "eslint-formatter-pretty": "^5.0.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -43,12 +53,19 @@
     "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "jest-canvas-mock": "2.5.2",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-axios": "4.8.0",
     "jest-sonar-reporter": "2.0.0",
     "lint-staged": "^15.2.11",
     "prettier": "^3.4.2",
-    "ts-jest": "29.2.5",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vite-plugin-simple-html": "^0.2.0"
+  },
+  "resolutions": {
+    "jest": "^29.7.0"
   }
 }
