--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
     "noEmit": false,
     "jsx": "react-jsx",
     "baseUrl": "src",
-    "incremental": true
+    "incremental": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "include": ["./src/**/*", "./jest.setup.ts"],
   "exclude": ["node_modules", "build", "dist"]
