--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tsc: watch": "tsc -b -w",
     "type-check": "tsc -p tsconfig.json --noEmit",
     "test": "jest --coverage=false --passWithNoTests",
+    "test:coverage": "jest --passWithNoTests",
     "test:watch": "jest --coverage=false --watch",
     "tsc:watch": "tsc -w -p tsconfig.json --noEmit"
   },
