chore: fix eslint and CI

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint-check": "eslint ./src --c .js,.ts,.tsx  -c eslint.config.js --max-warnings 10 -f pretty",
     "lint-fix": "eslint ./src --c .js,.ts,.tsx  -c eslint.config.js --max-warnings 10 -f pretty --fix",
     "lint-check:report": "eslint ./src --c .js,.ts,.tsx -o ./reports/eslint-report/index.txt -c eslint.config.js --max-warnings 10 -f pretty",
+    "prettier-check": "prettier --config ./.prettierrc --check \"./src\"",
+    "prettier-fix": "prettier --config ./.prettierrc --check \"./src\" --write",
     "preview": "vite preview",
     "tsc: watch": "tsc -b -w",
     "type-check": "tsc -p tsconfig.json --noEmit",
@@ -43,9 +45,10 @@
     "@typescript-eslint/parser": "^6.20.0",
     "@vitejs/plugin-react": "^4.3.4",
     "dotenv": "^16.4.7",
-    "eslint": "^9.17.0",
+    "eslint": "8.57.1",
     "eslint-formatter-pretty": "^5.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
